--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,4 +1,11 @@
 
 body {
-			margin-top: 2em;
+			margin: 2rem;
 	}
+
+
+.results-box {
+	display: inline-block;
+	max-width: 30rem;
+	min-width: 25rem;
+}
