--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,10 @@
 <html>
 	<head>
 		<title>{% block title %}{% endblock %}</title>
-		<link href="http://pasteup.guim.co.uk/0.0.2/css/pasteup.min.css" rel="stylesheet"/>
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+		<link href="/static/css/topcoat-desktop-light.css" rel="stylesheet"/>
+		<link href="/static/css/typeplate-unminified.css" rel="stylesheet"/>
+
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 		<link href="/static/css/base.css" rel="stylesheet"/>
 		<link rel="shortcut icon" href="http://static.guim.co.uk/favicon.ico" type="image/x-icon" />
 	</head>
