--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,11 @@
 	</head>
 
 	<body>
+
+		<nav class="top-nav"><a href="/">Latest</a></nav>
+
 		{% block content %}
 		{% endblock %}
+
 	</body>
 </html>
