Adding cache-headers and try to use memcache but do not freak out if you cannot

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -19,12 +19,12 @@ body {
 	padding-right: 1rem;
 }
 
-.result-link-bar {
+.result-link-bar .result-link {
 	font-size: 0.7rem;
 	opacity: 0.5;
 }
 
-.result-link-bar:hover {
+.result-link-bar .result-link:hover {
 	opacity: 1;
 }
 
