Changes the obsolete everything label to all clippings

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,8 @@
 
 <div class="results">
 	<section class="results-all">
-		<h2>Everything</h2>
+
+		<h2>All clippings</h2>
 		<table>
 			<thead>
 				<th>Count</th>
