Adds a Tweet link and nav links for the archive

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 
 	<body>
 
-		<nav class="top-nav"><a href="/">Latest</a></nav>
+		<nav class="top-nav"><a href="/">Latest</a> | <a href="/archive">Archive</a></nav>
 
 		{% block content %}
 		{% endblock %}
